--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <title></title>
   </head>
   <body>
+    <div class="container">
     <header>
       <nav>
-        <a href="#home">HOME</a>
-        <a href="#faq">FAQ</a>
-        <a href="#contacts">Contacts</a>
-        <a href="#stay_in_touch">Stay in touch</a>
+        <a href="#home"><img class="icon" src="http://lorempixel.com/20/20/">HOME</a>
+        <a href="#faq"><img class="icon" src="http://lorempixel.com/20/20/">FAQ</a>
+        <a href="#contacts"><img class="icon" src="http://lorempixel.com/20/20/">Contacts</a>
+        <a href="#stay_in_touch"><img class="icon" src="http://lorempixel.com/20/20/">Stay in touch</a>
       </nav>
     </header>
     <section id="home">
-      <p><img class="left" src="http://lorempixel.com/300/200/">Первостепенный текст Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan.</p>
+      <p><img class="wrap-left" src="http://lorempixel.com/300/200/">Первостепенный текст Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan.</p>
       <p class="clear-left">Второстепенный текст, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend3 tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan.</p>
-      <p><img class="right" src="http://lorempixel.com/300/200/">Третий сорт, забиваем полосу Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit.</p>
+      <p><img class="wrap-right" src="http://lorempixel.com/300/200/">Третий сорт, забиваем полосу Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit.</p>
     </section>
     <section id="faq">
       <h2>FAQ</h2>
@@ -30,10 +31,10 @@
     </section>
     <section id="contacts">
       <h2>Contacts</h2>
-      <img src="http://lorempixel.com/300/200/" class = "left">
-      <p>address: serious office outside Seriousville, just by boring lake</p>
-      <p>email: <a href="mailto:company@serious.business">company@serious.business</a></p>
-      <p>phone: <a href="#">888-888-88</a></p>
+      <img src="http://lorempixel.com/300/200/" class="map">
+      <p><img src="http://lorempixel.com/20/20/" class="icon"><span class="contact-type">address:</span> serious office outside Seriousville, just by boring lake</p>
+      <p><img src="http://lorempixel.com/20/20/" class="icon"><span class="contact-type">email:</span> <a href="mailto:company@serious.business" class="bigger-text">company@serious.business</a></p>
+      <p><img src="http://lorempixel.com/20/20/" class="icon"><span class="contact-type">phone:</span> <a href="#" class="bigger-text">888-888-88</a></p>
     </section>
     <section id="stay_in_touch">
       <h2>Stay in touch</h2>
@@ -54,23 +55,33 @@
     </section>
     <footer>
       <section class="footer-nav">
-        <a href="#home">HOME</a>
-        <a href="#faq">FAQ</a>
-        <a href="#contacts">Contacts</a>
-        <a href="#stay_in_touch">Stay in touch</a>
+	<span><a href="#home">HOME</a></span>
+        <span><a href="#faq">FAQ</a></span>
+        <span><a href="#contacts">Contacts</a></span>
+	<span><a href="#stay_in_touch">Stay in touch</a></span>
       </section>
       <section class="feedback">
-        <p>Let us hear your feedback</p>
+        Let us hear your feedback
         <form>
-	  How likely will you advise us?
-          <input type="radio" name="likelyhood" id="--" value="small" />
-          <label for="--">--</label>
-          <input type="radio" name="likelyhood" id="-+" value="medium" />
-          <label for="-+">-+</label>
-          <input type="radio" name="likelyhood" id="+-" value="large" />
-          <label for="+-">+-</label>
-          <input type="radio" name="likelyhood" id="++" value="large" />
-          <label for="++">++</label>
+	  <span>How likely will you advise us?</span>
+	  <div class="labels">
+	    <div>
+	      <input type="radio" name="likelyhood" id="--" value="small">
+              <label for="--">--</label>
+            </div>
+	    <div>
+	      <input type="radio" name="likelyhood" id="-+" value="medium">
+              <label for="-+">-+</label>
+            </div>
+	    <div>
+	      <input type="radio" name="likelyhood" id="+-" value="large">
+              <label for="+-">+-</label>
+            </div>
+	    <div>
+	      <input type="radio" name="likelyhood" id="++" value="large">
+              <label for="++">++</label>
+	    </div>
+	  </div>
           <div class="button">
             <button type="submit">Vote</button>
           </div>
@@ -78,5 +89,6 @@
       </section>
       <section class="copyright">&#169; Copyright 2013 - sudodoki</section>
     </footer>
+    </div>
   </body>
 </html>
